# Editor3D

./: CMakeLists.txt  imgui.ini
glad/include/glad/: glad.h
glad/src/: glad.c
include/: App.hpp  Camera.hpp  MOps.hpp  Scene.hpp  Shader.hpp  Texture.hpp  par_shapes.h
include/data/: Mesh.hpp  PrimitiveData.hpp  Shape.hpp
include/primitives/: Primitive.hpp
shaders/: floor.frag  floor.vert  shader.frag  shader.vert
src/: Mesh.cpp  Shader.cpp
src/App/: App.cpp  config.cpp  input.cpp  projections.cpp  ui.cpp
